Refactor: use List/Set static constructors